<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_color">


    <LinearLayout
        android:id="@+id/navi_quiz"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_widthPercent="25%">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/navi_quiz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navi_community"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/navi_quiz"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_widthPercent="25%">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/navi_community" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/community"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navi_progress"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/navi_community"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_widthPercent="25%">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/navi_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/progress"
            android:textColor="@color/white" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/navi_me"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_widthPercent="25%">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/navi_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/me"
            android:textColor="@color/white" />
    </LinearLayout>


</android.support.percent.PercentRelativeLayout>