<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_streak"
            style="@style/mHeading" />

        <TextView
            android:id="@+id/active_streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            style="@style/mHeading"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/day"
            tools:text="0" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            style="@style/mHeading"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/longest_streak"
            style="@style/mHeading"
            app:layout_constraintTop_toBottomOf="@+id/day" />

        <TextView
            android:id="@+id/longest_streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="32dp"
            style="@style/mHeading"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/day2"
            app:layout_constraintTop_toBottomOf="@+id/day"
            tools:text="0" />

        <TextView
            android:id="@+id/day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/day"
            android:textColor="@color/main_text"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day" />



    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/weekly_sun"
            style="@style/mWeek"
            android:text="S" />
        <TextView
            android:id="@+id/weekly_mon"
            style="@style/mWeek"
            android:text="M" />

        <TextView
            android:id="@+id/weekly_tue"
            style="@style/mWeek"
            android:text="T" />

        <TextView
            android:id="@+id/weekly_wed"
            style="@style/mWeek"
            android:text="W" />

        <TextView
            android:id="@+id/weekly_thu"
            style="@style/mWeek"
            android:text="T" />

        <TextView
            android:id="@+id/weekly_fri"
            style="@style/mWeek"
            android:text="F" />

        <TextView
            android:id="@+id/weekly_sta"
            style="@style/mWeek"
            android:text="S" />

    </LinearLayout>
</LinearLayout>